styles.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto';
}

/* Hero Section */
.hero {
    background-color: #1F2937;
    padding: 8px 200px 100px 200px;
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 90px;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: 500;
}

ul {
    display: flex;
    gap: 24px;
    padding: 0;
}

li {
    list-style-type: none; /* Remove bullets */
}

a {
    text-decoration: none; /* Remove underline from links */
}

.container {
    display: flex;
    gap: 48px;
}

a,
.subtext {
    font-size: 18px;
    color: #cfd0d3;
    font-weight: 300;
}

.main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
    margin-bottom: 12px;
}

.subtext {
    margin-bottom: 12px;
}

button {
    color: #F9FAF8;
    background-color: #3882F6;
    font-size: 18px;
    font-weight: 600;
    border: none;
    border-radius: 8px;
    padding: 8px 32px;
    box-sizing: border-box;
}

img {
    width: 500px;
    height: auto;
}

/* Information Section */
.information {
    padding: 70px 290px 124px 290px;
}

.info-header{
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    text-align: center;
    margin-bottom: 55px;
}

.info-container {
    display: flex;
    gap: 48px;
    justify-content: center;
}

.box {
    border: 4px solid #3882F6;
    border-radius: 18px;
    margin-bottom: 12px;
    box-sizing: border-box;
    width: 170px;
    height: 170px;
}

.info-subtext {
    font-size: 18px;
    color: #878788;
    text-align: center;
}

/* Quote Section */
.quote {
    background-color: #E5E7EB;
    padding: 136px 340px 100px 340px;
}

.quote-text {
    color:#454546;
    font-style: italic;
    font-size: 36px;
    font-weight: 300;
}

.quotee {
    color:#1F2937;
    text-align: end;
    font-size: 24px;
    font-weight: bolder;
}

/* Call to Action Section */
.call-to-action {
    box-sizing: border-box;
    background-color: #3882F6;
    margin: 100px 205px;
    padding: 50px 120px;
    border-radius: 8px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.action-text {
    font-size: 24px;
    font-weight: 500;
    color: #F9FAF8;
}

.action-subtext {
    font-size: 18px;
    color: #E5E7EB;
    font-weight: 300;
}

.call-to-action button {
    border: 2px solid #fff;
}

/* Footer Section */
.footer {
    background-color: #1F2937;
    padding: 50px;
    text-align: center;
}

.footer-text {
    color: #cfd0d3;
    font-size: 18px;
}

